# buildingblocks-rs

./: Cargo.toml  FLATBUFFERS.md  README.md  gen_fbs.sh
data/: README.md  fb_points
examples/: flatbuffers.rs  hello.rs  rkyv.rs  time.rs
src/: example.fbs  example_generated.rs  main.rs  mmap_files.rs
