[package]
name = "buildingblocks-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast_hilbert = "1.0.1"
flatbuffers = "22.9.29"
memmap2 = "0.5.7"
rkyv = { version = "0.7", features = ["validation"] }
